added message endpoints
