# src/internal/rest/message.go
@@ -1,0 +1,78 @@
+package rest
+
+import (
+	"github.com/aldinokemal/go-whatsapp-web-multidevice/domains/message"
+	domainMessage "github.com/aldinokemal/go-whatsapp-web-multidevice/domains/message"
+	"github.com/aldinokemal/go-whatsapp-web-multidevice/pkg/utils"
+	"github.com/aldinokemal/go-whatsapp-web-multidevice/pkg/whatsapp"
+	"github.com/gofiber/fiber/v2"
+)
+
+type Message struct {
+	Service domainMessage.IMessageService
+}
+
+func InitRestMessage(app *fiber.App, service domainMessage.IMessageService) Message {
+	rest := Message{Service: service}
+	app.Post("/message/:uid/reaction", rest.ReactMessage)
+	app.Post("/message/:uid/revoke", rest.RevokeMessage)
+	app.Post("/message/:uid/update", rest.UpdateMessage)
+	return rest
+}
+
+func (controller *Message) RevokeMessage(c *fiber.Ctx) error {
+	var request domainMessage.RevokeRequest
+	err := c.BodyParser(&request)
+	utils.PanicIfNeeded(err)
+
+	request.MessageID = c.Params("uid")
+	whatsapp.SanitizePhone(&request.Phone)
+
+	response, err := controller.Service.RevokeMessage(c.UserContext(), request)
+	utils.PanicIfNeeded(err)
+
+	return c.JSON(utils.ResponseData{
+		Status:  200,
+		Code:    "SUCCESS",
+		Message: response.Status,
+		Results: response,
+	})
+}
+
+func (controller *Message) UpdateMessage(c *fiber.Ctx) error {
+	var request domainMessage.UpdateMessageRequest
+	err := c.BodyParser(&request)
+	utils.PanicIfNeeded(err)
+
+	request.MessageID = c.Params("uid")
+	whatsapp.SanitizePhone(&request.Phone)
+
+	response, err := controller.Service.UpdateMessage(c.UserContext(), request)
+	utils.PanicIfNeeded(err)
+
+	return c.JSON(utils.ResponseData{
+		Status:  200,
+		Code:    "SUCCESS",
+		Message: response.Status,
+		Results: response,
+	})
+}
+
+func (controller *Message) ReactMessage(c *fiber.Ctx) error {
+	var request message.ReactionRequest
+	err := c.BodyParser(&request)
+	utils.PanicIfNeeded(err)
+
+	request.MessageID = c.Params("uid")
+	whatsapp.SanitizePhone(&request.Phone)
+
+	response, err := controller.Service.ReactMessage(c.UserContext(), request)
+	utils.PanicIfNeeded(err)
+
+	return c.JSON(utils.ResponseData{
+		Status:  200,
+		Code:    "SUCCESS",
+		Message: response.Status,
+		Results: response,
+	})
+}
